Fix spacing + add headings

--- a/src/styles/EventsSlider.scss
+++ b/src/styles/EventsSlider.scss
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    line-height: 1.7;
 
     img {
         width: 100%;
@@ -47,4 +48,9 @@
         text-align: center;
         width: 600px;
     }
+}
+
+h2 {
+    margin: 50px 0 -25px;
+    text-align: center;
 }
