--- a/src/styles/HeroBanner.scss
+++ b/src/styles/HeroBanner.scss
@@ -1,6 +1,6 @@
 .hero-main {
     display: flex;
-    height: 90vh;
+    height: 100vh;
     align-items: center;
     justify-content: center;
     color: #fff;
